--- a/snake-101/src/components/Board.css
+++ b/snake-101/src/components/Board.css
@@ -1,3 +1,17 @@
+.game-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
 .canvas {
-  border: 1px solid;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+  border-radius: 4px;
+  margin-top: 30px;
+  background: radial-gradient(
+    circle,
+    rgb(198, 236, 187) 0%,
+    rgb(183, 233, 148) 100%
+  );
 }
